--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
           <span id="footer-links">
             <a href="{{ site.pages.first.url }}" class="footer-link">About</a> <span class="separator">&bull;</span>
             <a href="https://twitter.com/mhuerster" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="https://github.com/mhuerster" class="footer-link">GitHub</a>
+            <a href="https://github.com/mhuerster" class="footer-link">GitHub</a> <span class="separator">&bull;</span>
+            <a href="{{ site.url }}/images/Resume.pdf" class="footer-link">Resume</a>
           </span>
         </div>
       </div>
