--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>Molly Huerster - {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
-      {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+      {% if page.description %}
+        <meta name="description" content="{{ page.description }}">
+      {% endif %}
       <!-- syntax highlighting CSS -->
       <link rel="stylesheet" href="/css/syntax.css">
 
