--- a/_includes/post.html
+++ b/_includes/post.html
@@ -17,6 +17,7 @@
   </div>
   <div class="colophon">
     <p>
+      <span id="signature">Molly Huerster</span>
       <span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
       <span id="social">Find me on <a href="https://twitter.com/mhuerster">Twitter</a>!</span>
     </p>
