--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
       <link href='http://fonts.googleapis.com/css?family=Forum' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Stalemate' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="site">
