direct resume link to html by default instead of pdf

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
             <a href="{{ site.pages.first.url }}" class="footer-link">About</a> <span class="separator">&bull;</span>
             <a href="https://twitter.com/mhuerster" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
             <a href="https://github.com/mhuerster" class="footer-link">GitHub</a> <span class="separator">&bull;</span>
-            <a href="http://mhuerster.github.io/images/Resume.pdf" class="footer-link">Resume</a> <span class="separator">&bull;</span>
+            <a href="/resume" class="footer-link">Resume</a> <span class="separator">&bull;</span>
             <a href="http://www.linkedin.com/in/maryhuerster/">LinkedIn</a>
           </span>
         </div>
