fix header again

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -32,7 +32,7 @@
           <img id="logo" src="/images/logo.jpeg">
         </div>  <!-- close header logo -->
         <div class="header-text">
-          <div id="site-title">molly.huerster(resume)</div>
+          <div id="site-title">molly.huerster()</div>
           <!-- <br class="clear"> -->
           <div class="header-links">
             <a href="/" class="header-link">home</a> <span class="separator">&bull;</span>
