add twitter metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
       <meta name="viewport" content="width=device-width">
       {% if page.description %}
         <meta name="description" content="{{ page.description }}">
+        <meta name="twitter:description" content="{{ page.description }}">
       {% endif %}
+      <meta name="twitter:card" content="summary">
+      <meta name="twitter:url" content="{{ page.url }}">
+      <meta name="twitter:site" content="@mhuerster">
+      <meta name="twitter:title" content="{{ page.title }}">
+      <meta name="twitter:domain" content="http://www.mhuerster.com">
       <!-- syntax highlighting CSS -->
       <link rel="stylesheet" href="/css/syntax.css">
       
@@ -65,6 +71,6 @@
         {{ content }}
 
     </div>
-    
+    <script type="text/javascript" src="../scripts/facebook.js"></script>  
   </body>
 </html>
