update twitter url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <meta name="twitter:description" content="{{ page.description }}">
       {% endif %}
       <meta name="twitter:card" content="summary">
-      <meta name="twitter:url" content="{{ page.url }}">
+      <meta name="twitter:url" content="http://www.mhuerster.com{{ page.url }}">
       <meta name="twitter:site" content="@mhuerster">
       <meta name="twitter:title" content="{{ page.title }}">
       <meta name="twitter:domain" content="http://www.mhuerster.com">
