--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
       {% if page.description %}
         <meta name="description" content="{{ page.description }}">
         <meta name="twitter:description" content="{{ page.description }}">
+      {% else %}
+        <meta name="twitter:description" content="A blog post by @mhuerster">
       {% endif %}
       <meta name="twitter:card" content="summary">
       <meta name="twitter:url" content="http://www.mhuerster.com{{ page.url }}">
