--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
         <meta name="description" content="{{ page.description }}">
         <meta name="twitter:description" content="{{ page.description }}">
       {% endif %}
-      <meta name="twitter:card" content="summary">
+      <meta name="twiter:image:src" content="/images/logo.jpg">
+      <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:url" content="{{ page.url }}">
       <meta name="twitter:site" content="@mhuerster">
       <meta name="twitter:title" content="{{ page.title }}">
