--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
       {% else %}
         <meta name="twitter:description" content="A blog post by @mhuerster">
       {% endif %}
-      <meta name="twitter:card" content="summary">
+      <meta name="twiter:image:src" content="/images/logo.jpg">
+      <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:url" content="http://www.mhuerster.com{{ page.url }}">
       <meta name="twitter:site" content="@mhuerster">
       <meta name="twitter:title" content="{{ page.title }}">
