--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,10 +11,21 @@
       <span id="date">{{ page.date | date_to_string }}</span>
     </div>
   </div>
-
   <div class="post">
     {{ content }}
-    <span id="signature">Molly Huerster</span><br>
+    <div id="signature">Molly Huerster</div>
+    <div class="social-sharing">
+      <a href="http://twitter.com/share?url={{ site.url }}{{ page.url }}" id="tweet">
+        <div class="social-icon twitter"></div>
+      </a>
+      <a href="mailto:?body={{ site.url }}{{ page.url }}" target="_blank">
+        <div class="social-icon email"></div>
+      </a>
+      <a href="{{ site.url }}{{ page.url }}">
+        <div class="social-icon facebook" id="fb"></div>
+      </a>
+    </div>
+    <br>
   </div>
   <div class="colophon">
     <p>
@@ -24,27 +35,37 @@
   </div>
   <div id="disqus_thread"></div>
   <script src="/scripts/responsive.js" type="text/javascript"></script>
-    {{% if page.comments %}}
-    <script type="text/javascript">
-        var disqus_shortname = 'mhuerster';
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    {{% endif %}}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script src="/scripts/facebook.js" type="text/javascript"></script>
+  <script src="/scripts/twitter.js" type="text/javascript"></script>
+  {{% if page.comments %}}
+  <script type="text/javascript">
+  var disqus_shortname = 'mhuerster';
+  (function() {
+    var dsq = document.createElement('script');
+    dsq.type = 'text/javascript';
+    dsq.async = true;
+    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  {{% endif %}}
+  <script>
+  (function(i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function() {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-52147811-1', 'auto');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
-
-</script>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+  </script>
+  <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
